added .bib small updates to rmd

--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -336,3 +336,14 @@
 	keywords = {Algal bloom, Blue-green algae, Cyanotoxin, Phosphorus, Restoration, Water framework directive},
 	pages = {5353--5358}
 }
+
+@article{milstead2013estimating,
+  title={Estimating Summer Nutrient Concentrations in Northeastern Lakes from SPARROW Load Predictions and Modeled Lake Depth and Volume},
+  author={Milstead, W Bryan and Hollister, Jeffrey W and Moore, Richard B and Walker, Henry A},
+  journal={PloS one},
+  volume={8},
+  number={11},
+  pages={e81457},
+  year={2013},
+  publisher={Public Library of Science}
+}
