--- a/hkm2014.Rmd
+++ b/hkm2014.Rmd
@@ -20,12 +20,24 @@ Abstract
 Introduction
 ------------
 
-[@Priem2012; @Thelwall2013; @Altmetrics].  
+
+What are the primary determinants of lake trophic status?  Determinants include, chemical and physical paramenters of the lake water column and land use/land cover.  Lake trophic status defined by Chl a.
 
 
 Methods
 -------
 
+## Data
+
+The two primary sources of data for this study are the National Lakes Assesment data and the National Land Cover Dataset [@usepa2009national;@]
+
+### Predictor Variables
+
+**Water Column**
+
+**Landscape**
+
+We defined the surrounding landscape of a lake with four different buffer distances: maximum in-lake distance [@hollister_predicting_2011], 300 meters, 1500 meters, and 2500 meters.  The various distances were used to tease out differences in local landscape effects versus larger landscape-level effects. For each of these distances, we used the National Land Cover Dataset (NLCD) and calculated the percent impervious and total area of each landcover class.  
 
 
 Results and Discussion
