--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -347,3 +347,10 @@
   year={2013},
   publisher={Public Library of Science}
 }
+
+@misc{usepa2009national,
+  title={National Lakes Assessment: a collaborative survey of the Nation's lakes. EPA 841-R-09-001},
+  author={USEPA (US Environmental Protection Agency)},
+  year={2009},
+  publisher={Office of Water and Office of Research and Development, US Environmental Protection Agency Washington, DC}
+}
