more refer fun...

--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -689,3 +689,11 @@
   year={2013},
   publisher={Public Library of Science}
 }
+@incollection{sandri2006variable,
+  title={Variable selection using random forests},
+  author={Sandri, Marco and Zuccolotto, Paola},
+  booktitle={Data analysis, classification and the forward search},
+  pages={263--270},
+  year={2006},
+  publisher={Springer}
+}
