added sparrow paper

--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -347,3 +347,21 @@
   year={2013},
   publisher={Public Library of Science}
 }
+
+
+@article{10.1371/journal.pone.0081457,
+    author = {Milstead, , W. Bryan AND Hollister, , Jeffrey W. AND Moore, , Richard B. AND Walker, , Henry A.},
+    journal = {PLoS ONE},
+    publisher = {Public Library of Science},
+    title = {Estimating Summer Nutrient Concentrations in Northeastern Lakes from SPARROW Load Predictions and Modeled Lake Depth and Volume},
+    year = {2013},
+    month = {11},
+    volume = {8},
+    url = {http://dx.doi.org/10.1371%2Fjournal.pone.0081457},
+    pages = {e81457},
+    number = {11},
+    doi = {10.1371/journal.pone.0081457}
+}        
+
+
+
