--- a/hkm2014.md
+++ b/hkm2014.md
@@ -25,17 +25,33 @@ What are the primary determinants of lake trophic status?  Determinants include,
 Methods
 -------
 
-## Data
+### Data
 
-The two primary sources of data for this study are the National Lakes Assesment data and the National Land Cover Dataset [@usepa2009national;@]
+The two primary sources of data for this study are the National Lakes Assesment data and the National Land Cover Dataset [@usepa2009national]
 
-### Predictor Variables
+#### Predictor Variables
 
 **Water Column**
 
 **Landscape**
 
 We defined the surrounding landscape of a lake with four different buffer distances: maximum in-lake distance [@hollister_predicting_2011], 300 meters, 1500 meters, and 2500 meters.  The various distances were used to tease out differences in local landscape effects versus larger landscape-level effects. For each of these distances, we used the National Land Cover Dataset (NLCD) and calculated the percent impervious and total area of each landcover class.  
+
+#### Independent Variables
+
+Chl a Trophic status from NLA.  What are the cut-offs.
+
+### Statistical Analyses
+
+Random Forest
+
+variable selection
+TS Probability
+
+PCA
+visualization
+
+
 
 
 Results and Discussion
