cleaned up .bib - may have been source of hang on ubuntu

--- a/hkm2014.md
+++ b/hkm2014.md
@@ -32,6 +32,7 @@ The two primary sources of data for this study are the National Lakes Assesment 
 #### Predictor Variables
 
 **Water Column**
+N,P
 
 **Landscape**
 
@@ -41,7 +42,18 @@ We defined the surrounding landscape of a lake with four different buffer distan
 
 Chl a Trophic status from NLA.  What are the cut-offs.
 
+### Dimension Reduction
+
+Expert opinion
+Correlation matrix
+random forests on subsets (i.e. buffer sizes)
+
+factor analysis of landscape
+factor analysis of watercolumn
+
 ### Statistical Analyses
+
+
 
 Random Forest
 
