add NLCD citation

--- a/hkm2014_2.bib
+++ b/hkm2014_2.bib
@@ -351,3 +351,15 @@
   year={2013},
   publisher={Public Library of Science}
 }
+
+@article{NLCD2006,
+  title={Completion of the 2006 national land cover database for the conterminous united states},
+  author={Fry, J., Xian, G., Jin, S., Dewitz, J., Homer, C., Yang, L., Barnes, C., Herold, N., and Wickham, J.},
+  journal={Photogrammetric Engineering and Remote Sensing},
+  volume={77},
+  number={9},
+  pages={858-864},
+  year={2011},
+}
+
+
