edited epa author in bib

--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -350,7 +350,7 @@
 
 @misc{usepa2009national,
   title={National Lakes Assessment: a collaborative survey of the Nation's lakes. EPA 841-R-09-001},
-  author={USEPA (US Environmental Protection Agency)},
+  author={US Environmental Protection Agency},
   year={2009},
   publisher={Office of Water and Office of Research and Development, US Environmental Protection Agency Washington, DC}
 }
