--- a/hkm2014.Rmd
+++ b/hkm2014.Rmd
@@ -48,18 +48,20 @@ Adding to the monitoring data collected via the NLA, we use the 2006 NLCD data t
 
 #### Possible Predictor Variables
 
-**Lake Properties**
+*Lake Properties*
+
 - Morphometry
 - Lat, Long
 - Ecoregion
 
-**Water Column**
+*Water Column*
+
 - N
 - P
 - Temp
 - etc.
 
-**Landscape**
+*Landscape*
 
 We defined the surrounding landscape of a lake with four different buffer distances: maximum in-lake distance [@hollister_predicting_2011], 300 meters, 1500 meters, and 2500 meters.  The various distances were used to tease out differences in local landscape effects versus larger landscape-level effects. For each of these distances, we used the National Land Cover Dataset (NLCD) and calculated the percent impervious and total area of each land cover class.  
 
@@ -70,24 +72,19 @@ We defined the surrounding landscape of a lake with four different buffer distan
 
 ### Variable Selection
 
-- Expert opinion
-- Correlation matrix
-- random forests on subsets (i.e. buffer sizes)
-
-- factor analysis of landscape
-- factor analysis of water column
+Prior to running the random forest models we need to reduce the total number of variables from the original *gazillion*.  To do this we examine the correlation between log transformed chlorophyll a concentration and each of the log transformed variables.  The rationale behind this selection method is to discard variables with little to no association with chlorphyll a and thus trophic state.  Variables with a pairwise correlation with chlorphyll a of less than 0.XXX were removed from further consideration
 
 ### Random Forest
 
 - background on random forest modelling
 - why we are using it
 
-**Variable Importance**
+*Variable Importance*
 
 - How to use for variable selection
 - what we used to identify important variables
 
-**Predicted Trophic State** 
+*Predicted Trophic State*
 
 - How random forests makes final predictions, 
 - what we used to assess accuracy, etc.
@@ -111,13 +108,13 @@ Results
 
 - Summary of Random Forest model (number of Params, total oob, etc.)
 
-**Variable Importance**
+*Variable Importance*
 
 - Narrative description of variables.
 
 - Table of Variables with gini or percent explained.
 
-**Predicted Trophic State**
+*Predicted Trophic State*
 
 - Summary stats of percent of lakes in each class
 - Confusion matrix of predicted with actual.
