--- a/hkm2014.Rmd
+++ b/hkm2014.Rmd
@@ -2,7 +2,7 @@
 opts_chunk$set(dev = 'pdf', fig.width=6, fig.height=4.3)
 
 ```
-Environmental Determinants of Lake Trophic Status in the Conterminous United States
+Environmental Determinants of Lake Trophic Status in the Conterminous United States: A Data Mining Approach
 ====================================================================
 
 ### Jeffrey W. Hollister, Betty J. Kreakie, W. Bryan Milstead
@@ -17,7 +17,7 @@ Abstract
 --------
 
 
-#### Keywords: National Lakes Assessment, Cyanobacteria, Chlorophyl a, National Land Cover Dataset, Random Forest
+#### Keywords: National Lakes Assessment, Cyanobacteria, Chlorophyl a, National Land Cover Dataset, Random Forest, Data Mining
 
 
 
@@ -48,11 +48,14 @@ Adding to the monitoring data collected via the NLA, we use the 2006 NLCD data t
 
 #### Possible Predictor Variables
 
+There are many possible variables that may be predictive of trophic status and thus could be included in our analysis.  We considered variables describing general lake properties, water column properties and land use/land cover of the surrounding landscape.
+
 *Lake Properties*
 
 - Morphometry
 - Lat, Long
 - Ecoregion
+- growing degree days
 
 *Water Column*
 
