update draft end of day 2, still no refs...  grrr.

--- a/hkm2014.md
+++ b/hkm2014.md
@@ -40,31 +40,12 @@ Methods
 
 The two primary sources of data for this study are the National Lakes Assessment (NLA) data and the National Land Cover Dataset (NLCD) [@usepa2009national]. Both datasets are national in scale and provide a unique snapshot view of the condition of United States' lakes and the patterns of the lakes surrounding landscape.  
 
-The NLA data were collected during the summer of 2007 and the final data were released in 200X.  With consistent methods and metrics collected at 1056 locations across the conterminous United States, the NLA provides a unique opportunity to examine continental scale patterns in lake productivity.  MORE ON NLA.
+The NLA data were collected during the summer of 2007 and the final data were released in 2009.  With consistent methods and metrics collected at 1056 locations across the conterminous United States, the NLA provides a unique opportunity to examine continental scale patterns in lake productivity.  The NLA collected data on biophysical meausers of lake water quality and habitat.  For this analysis we primarily examined the water quality measurements from the NLA [TABLE REF].
 
-Adding to the monitoring data collected via the NLA, we use the 2006 NLCD data to examine the possible landscape-level drivers of trophic status in lakes.  MORE ON NLCD.
 
-#### Possible Predictor Variables
 
-There are many possible variables that may be predictive of trophic status and thus could be included in our analysis.  We considered variables describing general lake properties, water column properties and land use/land cover of the surrounding landscape.
 
-*Lake Properties*
-
-- Morphometry
-- Lat, Long
-- Ecoregion
-- growing degree days
-
-*Water Column*
-
-- N
-- P
-- Temp
-- etc.
-
-*Landscape*
-
-We defined the surrounding landscape of a lake with four different buffer distances: maximum in-lake distance [@hollister_predicting_2011], 300 meters, 1500 meters, and 2500 meters.  The various distances were used to tease out differences in local landscape effects versus larger landscape-level effects. For each of these distances, we used the National Land Cover Dataset (NLCD) and calculated the percent impervious and total area of each land cover class.  
+Adding to the monitoring data collected via the NLA, we use the 2006 NLCD data to examine the possible landscape-level drivers of trophic status in lakes.  The NLCD is a nationally collected land use land cover dataset that also provides estimates of impervious surface.  We collected total land use land cover and total percent impervious surface within the surroundin landscape of the lake.  We defined the surrounding landscape of a lake with three different buffer distances: 300 meters, 1500 meters, and 2500 meters.  The various distances were used to tease out differences in local landscape effects versus larger landscape-level effects. 
 
 #### Independent Variables
 
@@ -73,7 +54,7 @@ We defined the surrounding landscape of a lake with four different buffer distan
 
 ### Variable Selection
 
-Prior to running the random forest models we need to reduce the total number of variables from the original *gazillion*.  To do this we examine the correlation between log transformed chlorophyll a concentration and each of the log transformed variables.  The rationale behind this selection method is to discard variables with little to no association with chlorphyll a and thus trophic state.  Variables with a pairwise correlation with chlorphyll a of less than 0.XXX were removed from further consideration
+Prior to running the random forest models we need to reduce the total number of variables from the original *gazillion*.  To do this we examine the correlation between log transformed chlorophyll a concentration and each of the log transformed variables.  The rationale behind this selection method is to discard variables with little to no association with chlorphyll a and thus trophic state.  Variables that explained less than 5% of the variance (i.e. a pairwise correlation of less than 0.22) were assumed to not be associated with cholorophyll a concentration and were removed from further consideration.  Additionally, variables measuring different attributes of the same distribution (e.g. minimum, maximum or mean temperature) were selected based on the variable with the strongest corelation with chlorophyll a.  Lastly, the remaining predictor variables that are highly correlated with one another should not be included in the initial set of variables passed to the random forest, unless sepcified by domain knowledge.  As such we examine the pairwise correlations of these remaining variables and make a determination, as determined by knowledge of the system, as to which variables to retain.
 
 ### Random Forest
 
@@ -92,17 +73,24 @@ Prior to running the random forest models we need to reduce the total number of 
 
 
 Results
--------
+--------
 
 ### Summary Statistics
 
 - Narrative summary. 
 - Table
 
+
+
 ### Variable Selection
 
 - Which variables were selected to include, and why, in the Random Forest.  
 - Table. 
+
+
+
+
+
 - Pairs plot of selected variables showing little/weak association between selected variables.
 
 ### Random Forest 
