--- a/hkm2014.md
+++ b/hkm2014.md
@@ -22,6 +22,7 @@ Abstract
 Introduction
 ------------
 
+Productivity in lentic systems is often categorized across a range of tropic states from early succesional lakes - oligotrophic - to late succussional - hypereutrophic.
 - Trophic State related to stuff we care about
 - Largely determined by primary productivity and thus can be estimate with Chl a (among others)
 - Most studies of trophic state are limited in spatial extent and don't look for broad scale patterns of variables that drive trophic state
@@ -47,7 +48,7 @@ The NLA data were collected during the summer of 2007 and the final data were re
 
 Adding to the monitoring data collected via the NLA, we use the 2006 NLCD data to examine the possible landscape-level drivers of trophic status in lakes.  The NLCD is a nationally collected land use land cover dataset that also provides estimates of impervious surface.  We collected total land use land cover and total percent impervious surface within the surroundin landscape of the lake.  We defined the surrounding landscape of a lake with three different buffer distances: 300 meters, 1500 meters, and 2500 meters.  The various distances were used to tease out differences in local landscape effects versus larger landscape-level effects. 
 
-#### Independent Variables
+### Defining Trophic State
 
 - Chl a Trophic status from NLA.  
 - What are the cut-offs.
