Added text to variable selection

--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -29,8 +29,7 @@
 }
 
 @article{berman_who_2013,
-	title = {Who Will Pay for Public Access to Research Data?},
-	volume = {341},
+	title = {Who Will Pay for Public Access to Research Data?},	volume = {341},
 	issn = {0036-8075, 1095-9203},
 	url = {http://www.sciencemag.org/content/341/6146/616},
 	doi = {10.1126/science.1241625},
@@ -725,3 +724,43 @@
   publisher={Springer}
 }
 
+@article{cutler2007random,
+  title={Random forests for classification in ecology},
+  author={Cutler, D Richard and Edwards Jr, Thomas C and Beard, Karen H and Cutler, Adele and Hess, Kyle T and Gibson, Jacob and Lawler, Joshua J},
+  journal={Ecology},
+  volume={88},
+  number={11},
+  pages={2783--2792},
+  year={2007},
+  publisher={Eco Soc America}
+}
+@article{prasad2006newer,
+  title={Newer classification and regression tree techniques: bagging and random forests for ecological prediction},
+  author={Prasad, Anantha M and Iverson, Louis R and Liaw, Andy},
+  journal={Ecosystems},
+  volume={9},
+  number={2},
+  pages={181--199},
+  year={2006},
+  publisher={Springer}
+}
+@article{boulesteix2012overview,
+  title={Overview of random forest methodology and practical guidance with emphasis on computational biology and bioinformatics},
+  author={Boulesteix, Anne-Laure and Janitza, Silke and Kruppa, Jochen and K{\"o}nig, Inke R},
+  journal={Wiley Interdisciplinary Reviews: Data Mining and Knowledge Discovery},
+  volume={2},
+  number={6},
+  pages={493--507},
+  year={2012},
+  publisher={Wiley Online Library}
+}
+@article{breiman2001random,
+  title={Random forests},
+  author={Breiman, Leo},
+  journal={Machine learning},
+  volume={45},
+  number={1},
+  pages={5--32},
+  year={2001},
+  publisher={Springer}
+}
