updated bib and Rmd

--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -350,7 +350,7 @@
 
 @misc{usepa2009national,
   title={National Lakes Assessment: a collaborative survey of the Nation's lakes. EPA 841-R-09-001},
-  author={US Environmental Protection Agency},
+  author={USEPA},
   year={2009},
   publisher={Office of Water and Office of Research and Development, US Environmental Protection Agency Washington, DC}
 }
@@ -725,3 +725,12 @@
   publisher={Springer}
 }
 
+@article{carlson1977trophic,
+  title={A trophic state index for lakes1},
+  author={Carlson, Robert E},
+  journal={Limnology and oceanography},
+  volume={22},
+  number={2},
+  pages={361--369},
+  year={1977}
+}
