Text about variable selection

--- a/hkm2014.Rmd
+++ b/hkm2014.Rmd
@@ -58,7 +58,7 @@ Adding to the monitoring data collected via the NLA, we use the 2006 NLCD data t
 
 ### Variable Selection
 
-Prior to running the random forest models we need to reduce the total number of variables from the original *gazillion*.  To do this we examine the correlation between log transformed chlorophyll a concentration and each of the log transformed variables.  The rationale behind this selection method is to discard variables with little to no association with chlorphyll a and thus trophic state.  Variables that explained less than 5% of the variance (i.e. a pairwise correlation of less than 0.22) were assumed to not be associated with cholorophyll a concentration and were removed from further consideration.  Additionally, variables measuring different attributes of the same distribution (e.g. minimum, maximum or mean temperature) were selected based on the variable with the strongest corelation with chlorophyll a.  Lastly, the remaining predictor variables that are highly correlated with one another should not be included in the initial set of variables passed to the random forest, unless sepcified by domain knowledge.  As such we examine the pairwise correlations of these remaining variables and make a determination, as determined by knowledge of the system, as to which variables to retain.
+A strength of random forest is its ability to handle numerous correlated variables without a decrease in prediction accuracy.   Yet the number of redundant correlated predictor variables in our data requires a cursory reduction through the described variable selection method.  To do this we examine the correlation between log transformed chlorophyll a concentration and each of the log transformed variables.  The rationale behind this selection method is to discard variables with little to no association with chlorphyll a and thus trophic state.  Variables that explained less than 5% of the variance (i.e. a pairwise correlation of less than 0.22) were assumed to not be associated with cholorophyll a concentration and were removed from further consideration.  Additionally, variables measuring different attributes of the same distribution (e.g. minimum, maximum or mean temperature) were selected based on the variable with the strongest corelation with chlorophyll a.  Lastly, the remaining predictor variables that are highly correlated with one another should not be included in the initial set of variables passed to the random forest, unless sepcified by domain knowledge.  As such we examine the pairwise correlations of these remaining variables and make a determination, as determined by knowledge of the system, as to which variables to retain.
 
 ### Random Forest
 
