--- a/hkm2014.md
+++ b/hkm2014.md
@@ -51,8 +51,15 @@ Adding to the monitoring data collected via the NLA, we use the 2006 NLCD data t
 
 ### Defining Trophic State
 
-- Chl a Trophic status from NLA.  
-- What are the cut-offs.
+The dependent variable for this effort is lake trophic state.  Trophic state is usually defined over four levels: oligotrphic, mesotrophic, eutorphic, and hypereutrophic.  Commonly, cut-off values for each of these four levels may be specified with nitrogen concnetration, phosphorus concentration, secchi depth, or chlorphyll a concentration [@carlson1977trophic;@usepa2009national].  As this study is based largely from the NLA we use the NLA definition of trophic state based on the chlorophyll a concentrations (Table).
+
+|Trophic State   |Cut-off  |
+|:---------------|:--------|
+|oligotrophic    |<= 0.2   |
+|mesotrophic     |>2-7     |
+|eutrophic       |>7-30    |
+|hypereutrophic  |>30      |
+
 
 ### Variable Selection
 
