--- a/hkm2014.Rmd
+++ b/hkm2014.Rmd
@@ -55,7 +55,7 @@ Adding to the monitoring data collected via the NLA, we use the 2006 NLCD data t
 
 The dependent variable for this effort is lake trophic state.  Trophic state is usually defined over four levels: oligotrphic, mesotrophic, eutorphic, and hypereutrophic.  Commonly, cut-off values for each of these four levels may be specified with nitrogen concnetration, phosphorus concentration, secchi depth, or chlorphyll a concentration [@carlson1977trophic;@usepa2009national].  As this study is based largely from the NLA we use the NLA definition of trophic state based on the chlorophyll a concentrations (Table).
 
-```{r trophicStateTable, results='asis' echo=FALSE, fig.cap="Chlorphyll a based trophic state cut-offs"}
+```{r trophicStateTable, results='asis', echo=FALSE, fig.cap="Chlorphyll a based trophic state cut-offs"}
 ts<-c("oligotrophic","mesotrophic","eutrophic","hypereutrophic")
 co<-c("<= 0.2",">2-7",">7-30",">30")
 xdf<-data.frame(ts,co)
