added v. smith refs

--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -777,3 +777,23 @@
   year={2001},
   publisher={Springer}
 }
+
+@article{smith1999eutrophication,
+  title={Eutrophication: impacts of excess nutrient inputs on freshwater, marine, and terrestrial ecosystems},
+  author={Smith, Val H and Tilman, G David and Nekola, Jeffery C},
+  journal={Environmental pollution},
+  volume={100},
+  number={1},
+  pages={179--196},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@incollection{smith1998cultural,
+  title={Cultural eutrophication of inland, estuarine, and coastal waters},
+  author={Smith, Val H},
+  booktitle={Successes, limitations, and frontiers in ecosystem science},
+  pages={7--49},
+  year={1998},
+  publisher={Springer}
+}
