more refs added

--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -797,3 +797,13 @@
   year={1998},
   publisher={Springer}
 }
+
+@article{smith2006eutrophication,
+  title={Eutrophication of freshwater and marine ecosystems},
+  author={Smith, Val H and Joye, Samantha B and Howarth, Robert W and others},
+  journal={Limnology and Oceanography},
+  volume={51},
+  number={1},
+  pages={351--355},
+  year={2006}
+}
