--- a/hkm2014.md
+++ b/hkm2014.md
@@ -22,9 +22,10 @@ Abstract
 Introduction
 ------------
 
-Productivity in lentic systems is often categorized across a range of tropic states (e.g. the tropic continuum) from early succesional (i.e. oligotrophic)to late successional lakes (i.e. hypereutrophic) [@carlson1977trophic].  Lakes naturally occur across the range of trophic state and higher primary productivity is not necessarily a predictor of poor ecological condition.  Lakes that are naturally oligotrophic occur in nutrient poor areas or have a more recent geologic history.  These lakes are often found in higher elevations, have clear water, and are often favored for drinking water or direct contact recreation (e.g. swimming).   Lakes with higher productivity (e.g. eutrophic lakes) have greater nutrient loads, tend to be less clear, have greater density of aquatic plants, and often support more diverse and abundant fish communities.  Lakes will naturally shift to higher trophic states but this is a slow process.  Given this fact, monitoring trophic state allows the identification of rapid shifts in trophic state or locating lakes with unusually high productivity (e.g. hypereutrophic).  These cases are indicative of lakes under greater anthropogenic nutrient loads, also known as cultural eutrophication, and are more likely to be at risk of fish kills, fouling, and harmful algal blooms[].
+Productivity in lentic systems is often categorized across a range of tropic states (e.g. the tropic continuum) from early succesional (i.e. oligotrophic)to late successional lakes (i.e. hypereutrophic) [@carlson1977trophic].  Lakes naturally occur across the range of trophic state and higher primary productivity is not necessarily a predictor of poor ecological condition.  Lakes that are naturally oligotrophic occur in nutrient poor areas or have a more recent geologic history.  These lakes are often found in higher elevations, have clear water, and are often favored for drinking water or direct contact recreation (e.g. swimming).   Lakes with higher productivity (e.g. eutrophic lakes) have greater nutrient loads, tend to be less clear, have greater density of aquatic plants, and often support more diverse and abundant fish communities.  Lakes will naturally shift to higher trophic states but this is a slow process.  Given this fact, monitoring trophic state allows the identification of rapid shifts in trophic state or locating lakes with unusually high productivity (e.g. hypereutrophic).  These cases are indicative of lakes under greater anthropogenic nutrient loads, also known as cultural eutrophication, and are more likely to be at risk of fish kills, fouling, and harmful algal blooms[@smith1998cultural;smith1999eutrophication;smith2006eutrophication].
 
-- Most studies of trophic state are limited in spatial extent and don't look for broad scale patterns of variables that drive trophic state
+Given the association between trophic state and many ecosystem services and disservices, being able to model trophic state
+Most studies of trophic state are limited in spatial extent and don't look for broad scale patterns of variables that drive trophic state
 - Most studies of trophic state focus on in-lake variables (i.e. nurients), limited ability to predict over large regions
 
 - We take advanatage of one the first complete national scale efforts monitoring lakes to try and discern broad patterns in both in-lake parameters that drive trophic state and landscape level parameters that might also drive trophic state
@@ -67,7 +68,7 @@ A strength of random forest is its ability to handle numerous correlated variabl
 
 ### Random Forest
 
-As stated above, our goal is to explore relative variable importance in determination of lake trophic status.  We selected random forest as statistical approach since the random forest provides a robust measure of variable importance.  Random forest is a machine learning algorithm that aggregates numerous decision trees in order to obtain to a consensus prediction of response categories.  For every tree in the forest, the sample data are bootstrapped and subsets of predictor variables are randomly selected.  Tree bifurcations are based on the best splits given the random subset of predictor variables and grown without pruning.   
+As stated above, our goal is to explore relative variable importance in determination of lake trophic status.  We selected random forest as the statistical analysis approach since random forest provides a robust measure of variable importance.  Random forest is a machine learning algorithm that aggregates numerous decision trees in order to obtain to a consensus prediction of response categories.  For every tree in the forest, the sample data are bootstrapped and subsets of predictor variables are randomly selected.  Tree bifurcations are based on the best splits given the random subset of predictor variables and grown without pruning.   
 
 *Variable Importance*
 
