--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -725,7 +725,7 @@
 }
 
 @article{carlson1977trophic,
-  title={A trophic state index for lakes1},
+  title={A trophic state index for lakes},
   author={Carlson, Robert E},
   journal={Limnology and oceanography},
   volume={22},
@@ -806,4 +806,15 @@
   number={1},
   pages={351--355},
   year={2006}
+}
+
+@article{imboden1978dynamic,
+  title={A dynamic lake model for trophic state prediction},
+  author={Imboden, DM and G{\"a}chter, R},
+  journal={Ecological modelling},
+  volume={4},
+  number={2},
+  pages={77--98},
+  year={1978},
+  publisher={Elsevier}
 }
