trying to get the umlaut in the text

--- a/format.sty
+++ b/format.sty
@@ -1,4 +1,7 @@
 \usepackage[vmargin=1in,hmargin=1in]{geometry}
 \usepackage{lineno}
+\usepackage[T2A]{fontenc}
+\usepackage[utf8]{inputenc}
+\usepackage[dutch,english]{babel}
 \linenumbers
 \usepackage{times}
