--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -818,3 +818,14 @@
   year={1978},
   publisher={Elsevier}
 }
+
+@article{salas1991simplified,
+  title={A simplified phosphorus trophic state model for warm-water tropical lakes},
+  author={Salas, Henry J and Martino, Paloma},
+  journal={Water research},
+  volume={25},
+  number={3},
+  pages={341--350},
+  year={1991},
+  publisher={Elsevier}
+}
