--- a/hkm2014.Rmd
+++ b/hkm2014.Rmd
@@ -27,7 +27,11 @@ Introduction
 
 Productivity in lentic systems is often categorized across a range of tropic states (e.g. the tropic continuum) from early succesional (i.e. oligotrophic)to late successional lakes (i.e. hypereutrophic) [@carlson1977trophic].  Lakes naturally occur across the range of trophic state and higher primary productivity is not necessarily a predictor of poor ecological condition.  Lakes that are naturally oligotrophic occur in nutrient poor areas or have a more recent geologic history.  These lakes are often found in higher elevations, have clear water, and are often favored for drinking water or direct contact recreation (e.g. swimming).   Lakes with higher productivity (e.g. eutrophic lakes) have greater nutrient loads, tend to be less clear, have greater density of aquatic plants, and often support more diverse and abundant fish communities.  Lakes will naturally shift to higher trophic states but this is a slow process.  Given this fact, monitoring trophic state allows the identification of rapid shifts in trophic state or locating lakes with unusually high productivity (e.g. hypereutrophic).  These cases are indicative of lakes under greater anthropogenic nutrient loads, also known as cultural eutrophication, and are more likely to be at risk of fish kills, fouling, and harmful algal blooms[@smith1998cultural;@smith1999eutrophication;@smith2006eutrophication].
 
-Given the association between trophic state and many ecosystem services and disservices, being able to model trophic state could allow for estimating trophic state in unmonitored lakes and provide a first cut at identifying lakes with the potential for harmful algal blooms and other problems associated with cultural eutrophication.  Most prior models related to trophic state are either limited in spatial extent, have data from a small number of lakes, model nutrients or chlorophyll a directly, or focus on in-lake information (i.e. nurients) and not on the landscape-level data.  For instance, Imboden and G{\"a}chter [-@imboden1978dynamic] built a model of phosphorus using .  This model...  And xxx said this.  Additionally... xxx found... 
+Given the association between trophic state and many ecosystem services and disservices, being able to model trophic state could allow for estimating trophic state in unmonitored lakes and provide a first cut at identifying lakes with the potential for harmful algal blooms and other problems associated with cultural eutrophication.  Most prior models related to trophic state are either limited in spatial extent, have data from a small number of lakes, model nutrients or chlorophyll a directly, use measures of trophic state not widely used or focus on in-lake information (i.e. nurients) and not on the landscape-level data.  
+
+For instance, Imboden and G&auml;chter [-@imboden1978dynamic] built a model of primary prodcuction per unit area with a suite of in lake variables and tested this on only three lakes.  Another study by Salas and Martino [-salas1991simplified] focused only on warm water lakes and used a dataset of 27 lakes to build their models.  They included loading coefficients of Phosphorus from the surrounding landscapes in addition to lake morphometry nutrient and cholorphyll *a* concentration, and disssolved oxygen.  They also focus on the scientific and managerial importance of trophic state.  However, the study suffers from data were collected by independent labs with variation in the methods and their focus is on warm-water lakes.    
+
+Lastly, ... xxx found... 
 
 Building on these past efforts, we take advanatage of one the first complete national scale efforts monitoring lakes to try and discern broad patterns in both in-lake parameters that drive trophic state and landscape level parameters that might also drive trophic state
 
