--- a/hkm2014.bib
+++ b/hkm2014.bib
@@ -28,6 +28,17 @@
 	pages = {303--327}
 }
 
+@article{diaz2006gene,
+  title={Gene selection and classification of microarray data using random forest},
+  author={D{\'\i}az-Uriarte, Ram{\'o}n and De Andres, Sara Alvarez},
+  journal={BMC bioinformatics},
+  volume={7},
+  number={1},
+  pages={3},
+  year={2006},
+  publisher={BioMed Central Ltd}
+}
+
 @article{berman_who_2013,
 	title = {Who Will Pay for Public Access to Research Data?},	volume = {341},
 	issn = {0036-8075, 1095-9203},
