--- a/workingAnalysis_bootstrap.Rmd
+++ b/workingAnalysis_bootstrap.Rmd
@@ -5,7 +5,7 @@ date: "Wednesday, April 23, 2014"
 output: pdf_document
 ---
 
-```{r setup, include=FALSE, echo=FALSE, cache=TRUE}
+```{r setup, include=FALSE, echo=FALSE, cache=FALSE}
 devtools::install_github("hkm","jhollist")
 library(hkm)
 library(varSelRF)
@@ -16,28 +16,28 @@ This document represents the various modeling efforts we have tried for the HKM2
 
 First, are the water quality variables from NLA.
 
-```{r nlaWaterQual,echo=FALSE, cache=TRUE}
+```{r nlaWaterQual,echo=FALSE, cache=FALSE}
 nlawqNames<-names(hkm2014Data)[c(155:158,160:194)]
 nlawqNames
 ```
 
 Second,are the GIS based variables
 
-```{r gisVariables, echo=FALSE, cache=TRUE}
+```{r gisVariables, echo=FALSE, cache=FALSE}
 gisNames<-names(hkm2014Data[c(3,149:153,195:208)])
 gisNames
 ```
 
 Third, are the landscape variables based on total area
 
-```{r lulcVariablesArea, echo=FALSE, cache=TRUE}
+```{r lulcVariablesArea, echo=FALSE, cache=FALSE}
 lulcAreaNames<-names(hkm2014Data[grep("Km2_",names(hkm2014Data))])
 if(length(grep("NA_",lulcAreaNames))>0){lulcAreaNames<-lulcAreaNames[-grep("NA_",lulcAreaNames)]}
 lulcAreaNames
 ```
 
 Fourth, the percent landscape variables (also inlcluding percent impervious) 
-```{r lulcVariablesPerc, echo=FALSE, cache=TRUE}
+```{r lulcVariablesPerc, echo=FALSE, cache=FALSE}
 lulcPercentNames<-names(hkm2014Data[c(grep("PercentImperv",names(hkm2014Data)),grep("Per_",names(hkm2014Data)))])
 if(length(grep("NA_",lulcPercentNames))>0){lulcPercentNames<-lulcPercentNames[-grep("NA_",lulcPercentNames)]}
 lulcPercentNames
@@ -45,7 +45,7 @@ lulcPercentNames
 
 Lastly, the response variable
 
-```{r response, echo=FALSE, cache=TRUE}
+```{r response, echo=FALSE, cache=FALSE}
 respName<-"TS_CHLA"
 respName
 ```
@@ -54,7 +54,7 @@ respName
 
 This first random forest predicts Cholorophyl Trophic status using all NLA variables, all GIS variables except for the landscape variables summarized by total area.
 
-```{r allLandscapeArea, echo=FALSE, cache=TRUE}
+```{r allLandscapeArea, echo=FALSE, cache=FALSE}
 allVarDF<-na.omit(hkm2014Data[,c(nlawqNames,gisNames,lulcAreaNames,respName)])
 allArea_varsel<-varSelRF(allVarDF[,1:dim(allVarDF)[2]-1],allVarDF[,respName],ntree = 10000, ntreeIterat = 5000,vars.drop.frac = 0.2)
 summary(allArea_varsel$selec.history)
@@ -66,7 +66,7 @@ plot(allArea_varsel, which=2)
 
 Our second model uses all NLA and GIS variables, and landscape var summarized by total percent.
 
-```{r allLandscapePercent, echo=FALSE, cache=TRUE}
+```{r allLandscapePercent, echo=FALSE, cache=FALSE}
 allVarDF<-na.omit(hkm2014Data[,c(nlawqNames,gisNames,lulcPercentNames,respName)])
 allPerc_varsel<-varSelRF(allVarDF[,1:dim(allVarDF)[2]-1],allVarDF[,respName],ntree = 10000, ntreeIterat = 5000,vars.drop.frac = 0.2)
 summary(allPerc_varsel$selec.history)
@@ -78,7 +78,7 @@ plot(allPerc_varsel, which=2)
 
 This third model uses only GIS derived variables with landscape summarized by total area
 
-```{r gisLandscapeArea, echo=FALSE, cache=TRUE}
+```{r gisLandscapeArea, echo=FALSE, cache=FALSE}
 gisVarDF<-na.omit(hkm2014Data[,c(gisNames,lulcAreaNames,respName)])
 gisArea_varsel<-varSelRF(gisVarDF[,1:dim(gisVarDF)[2]-1],gisVarDF[,respName],ntree = 10000, ntreeIterat = 5000,vars.drop.frac = 0.2)
 summary(gisArea_varsel$selec.history)
@@ -90,9 +90,12 @@ plot(gisArea_varsel, which=2)
 
 This fourth model uses only GIS derived variables with landscape summarized by total percent.
 
-```{r gisLandscapePercent, echo=FALSE, cache=TRUE}
+```{r gisLandscapePercent, echo=FALSE, cache=FALSE}
 gisVarDF<-na.omit(hkm2014Data[,c(gisNames,lulcPercentNames,respName)])
-gisPerc_varsel<-varSelRF(gisVarDF[,1:dim(gisVarDF)[2]-1],gisVarDF[,respName],ntree = 10000, ntreeIterat = 5000,vars.drop.frac = 0.2)
+gisPerc_varsel<-varSelRF(gisVarDF[,1:dim(gisVarDF)[2]-1],gisVarDF[,respName],ntree = 100, ntreeIterat = 50,
+												 vars.drop.frac = 0.2)
+gisPerc_varsel_boot<-varSelRFBoot(gisVarDF[,1:dim(gisVarDF)[2]-1],gisVarDF[,respName],bootnumber=10,
+																	usingCluster=F,srf=gisPerc_varsel)
 summary(gisPerc_varsel$selec.history)
 plot(gisPerc_varsel, which=2)
 ```
@@ -101,7 +104,7 @@ plot(gisPerc_varsel, which=2)
 
 This fith model uses only GIS derived variables with landscape summarized by total area normalized by area of the lake.
 
-```{r gisLandscapeLakeArea, echo=FALSE, cache=TRUE}
+```{r gisLandscapeArea, echo=FALSE, cache=FALSE}
 gisVarDF<-na.omit(hkm2014Data[,c(gisNames,lulcAreaNames,respName)])
 gisVarDF[,lulcAreaNames]<-gisVarDF[,lulcAreaNames]/gisVarDF[,"LakeArea"]
 gisArea_varsel<-varSelRF(gisVarDF[,1:dim(gisVarDF)[2]-1],gisVarDF[,respName],ntree = 10000, ntreeIterat = 5000,vars.drop.frac = 0.2)
@@ -113,7 +116,7 @@ plot(gisArea_varsel, which=2)
 
 This sixth model uses only GIS derived variables with landscape summarized by total area normalized by lake volume.
 
-```{r gisLandscapeLakeVolume, echo=FALSE, cache=TRUE}
+```{r gisLandscapeArea, echo=FALSE, cache=FALSE}
 gisVarDF<-na.omit(hkm2014Data[,c(gisNames,lulcAreaNames,respName)])
 gisVarDF[,lulcAreaNames]<-gisVarDF[,lulcAreaNames]/gisVarDF[,"VolumeCorrect"]
 gisArea_varsel<-varSelRF(gisVarDF[,1:dim(gisVarDF)[2]-1],gisVarDF[,respName],ntree = 10000, ntreeIterat = 5000,vars.drop.frac = 0.2)
