--- a/hkmAnalysis.Rmd
+++ b/hkmAnalysis.Rmd
@@ -13,6 +13,27 @@ data(hkm2014Data)
 ```
 
 
+
+## Questions
+
+### Question 1. Can modern data-mining approaches improve upon predictions of trophic state made with the most commonly used classic linear models?
+
+**Predict Trophic State with Classic Models**
+
+
+### Question 2. Are *in situ* nutrient and water quality data required to make predicitions of trophic state or can GIS derived information on lake and land use/land cover provide quality predictions?
+
+**Predict for these classes**
+1. NLA Chl a trophic state classes
+2. High/Low trophic state classes
+
+### Question3. Can data-mining approaches identify new, interesting variables to use for the prediction of trophic state?
+
+
+
+
+
+
 ```{r names, echo=FALSE, cache=TRUE}
 nlawqNames<-names(hkm2014Data)[c(155:158,160:194)]
 gisNames<-names(hkm2014Data[c(3,149:153,195:208)])
@@ -20,4 +41,27 @@ lulcPercentNames<-names(hkm2014Data[c(grep("PercentImperv",names(hkm2014Data)),g
 if(length(grep("NA_",lulcPercentNames))>0){lulcPercentNames<-lulcPercentNames[-grep("NA_",lulcPercentNames)]}
 respName<-"TS_CHLA"
 ```
+
+## Chl *a* Trophic Status ~ All Variables + Landscape Percent
+
+```{r allLandscapePercent, echo=FALSE, cache=TRUE}
+allVarDF<-na.omit(hkm2014Data[,c(nlawqNames,gisNames,lulcPercentNames,respName)])
+allPerc_varsel<-varSelRF(allVarDF[,1:dim(allVarDF)[2]-1],allVarDF[,respName],ntree = 10000, 
+												 ntreeIterat = 5000, vars.drop.frac = 0.2)
+summary(allPerc_varsel$selec.history)
+plot(allPerc_varsel, which=2)
+```
+
+
+## Chl *a* Trophic Status ~ GIS Only Variables +Landscape Percent
+
+```{r gisLandscapePercent, echo=FALSE, cache=TRUE}
+gisVarDF<-na.omit(hkm2014Data[,c(gisNames,lulcPercentNames,respName)])
+gisPerc_varsel<-varSelRF(gisVarDF[,1:dim(gisVarDF)[2]-1],gisVarDF[,respName],ntree = 10000, 
+												 ntreeIterat = 5000,vars.drop.frac = 0.2)
+summary(gisPerc_varsel$selec.history)
+plot(gisPerc_varsel, which=2)
+```
+
+
 
